Development of cinema & locations based controllers
